<resources>
    <string name="app_name">SimpleChat</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nickname">Nickname</string>
    <string name="simple_chat">Simple Chat</string>
    <string name="or">or</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
    <string name="choose_n_your_avatar">Choose your avatar</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="your_have_0_active_chats">Your have 0 active chats</string>
    <string name="refresh">Refresh</string>
</resources>